--- a/DayZServer/DayZServer.csproj
+++ b/DayZServer/DayZServer.csproj
@@ -190,6 +190,14 @@
   <ItemGroup>
     <Resource Include="images\globalheader_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\checkoff.png" />
+    <Resource Include="images\checkon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\deleteoff.png" />
+    <Resource Include="images\deleteon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
