--- a/DayZServer/DayZServer.csproj
+++ b/DayZServer/DayZServer.csproj
@@ -198,6 +198,9 @@
     <Resource Include="images\deleteoff.png" />
     <Resource Include="images\deleteon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\deletedisabled.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
