--- a/DayZServer/packages.config
+++ b/DayZServer/packages.config
@@ -3,5 +3,7 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="SteamKit2" version="1.6.2" targetFramework="net45" />
+  <package id="ToastNotifications" version="2.1.0" targetFramework="net452" />
+  <package id="ToastNotifications.Messages" version="2.1.0" targetFramework="net452" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net45" />
 </packages>
