--- a/DayZServer/DayZServer.csproj
+++ b/DayZServer/DayZServer.csproj
@@ -266,6 +266,9 @@
   <ItemGroup>
     <Resource Include="images\copyoff.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\screenshot2_2sm.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
