--- a/DayZServer/QueryMaster/QueryMaster/QueryMaster.csproj
+++ b/DayZServer/QueryMaster/QueryMaster/QueryMaster.csproj
@@ -10,6 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QueryMaster</RootNamespace>
     <AssemblyName>QueryMaster</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
